--- a/Colord/Colord.vcxproj.filters
+++ b/Colord/Colord.vcxproj.filters
@@ -34,25 +34,19 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <None Include="shader.frag">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="shader.vert">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
     <Image Include="awesomeface.png">
       <Filter>Source Files</Filter>
     </Image>
     <Image Include="container.jpg">
       <Filter>Source Files</Filter>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="cube.vert">
-      <Filter>Source Files</Filter>
-    </None>
-    <None Include="cube.frag">
-      <Filter>Source Files</Filter>
-    </None>
-    <None Include="light.vert">
-      <Filter>Source Files</Filter>
-    </None>
-    <None Include="light.frag">
-      <Filter>Source Files</Filter>
-    </None>
   </ItemGroup>
 </Project>
