--- a/Assimp/Assimp.vcxproj
+++ b/Assimp/Assimp.vcxproj
@@ -26,6 +26,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
@@ -36,10 +37,8 @@
     <Image Include="container2_specular.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="cube.frag" />
-    <None Include="cube.vert" />
-    <None Include="light.frag" />
-    <None Include="light.vert" />
+    <None Include="main.frag" />
+    <None Include="main.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
