--- a/Assimp/Assimp.vcxproj.filters
+++ b/Assimp/Assimp.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="Model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="awesomeface.png">
@@ -54,16 +57,10 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <None Include="cube.vert">
+    <None Include="main.vert">
       <Filter>Source Files</Filter>
     </None>
-    <None Include="cube.frag">
-      <Filter>Source Files</Filter>
-    </None>
-    <None Include="light.vert">
-      <Filter>Source Files</Filter>
-    </None>
-    <None Include="light.frag">
+    <None Include="main.frag">
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
